--- a/src/Formee/FrontEnd/Admins/Admins.Web/Shared/NavMenu.razor
+++ b/src/Formee/FrontEnd/Admins/Admins.Web/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Admins.Web</a>
+        <a class="navbar-brand" href="/">Admins Dashboard</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,12 +15,22 @@
             </NavLink>
         </div>
 
-        <div>
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="subscriptions">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Subscriptions
-                </NavLink>
-            </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="subscriptions">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Subscriptions
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="coupons">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Coupons
+            </NavLink>
+        </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="users">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Users Management
+            </NavLink>
         </div>
     </nav>
 </div>
