--- a/src/Formee/FrontEnd/Admins/Admins.Web/_Imports.razor
+++ b/src/Formee/FrontEnd/Admins/Admins.Web/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
 @using Admins.Web
 @using Admins.Web.Shared
+@using Admins.Web.Dtos.Users
