--- a/src/Formee/FrontEnd/Users/Client.Web/App.razor
+++ b/src/Formee/FrontEnd/Users/Client.Web/App.razor
@@ -6,7 +6,7 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <Authorizing>
-                    <p>Determining session state, please wait...</p>
+                    <FmLoadingScreen />
                 </Authorizing>
                 <NotAuthorized>
                     <h1>Sorry</h1>
