implement custom authorization

--- a/src/Formee/FrontEnd/Users/Web.Components/Components/Identity/AggregateUserIdentity.razor
+++ b/src/Formee/FrontEnd/Users/Web.Components/Components/Identity/AggregateUserIdentity.razor
@@ -33,6 +33,8 @@
                 .Claims
                 .FirstOrDefault(c => c.Type == "sub")
                 ?.Value;
+
+            _appState.Identity.SetAuthId(authProviderId);
             
             _logger.LogInformation("AUTH: user is authenticated");
 
